@@ -1,8 +1,11 @@
 libhocr (0.10.7)
 
  * hocr-gtk save session parameters
+ * remove .py from hocr-gtk example python scripts file names
  * use libtiff for black and white 
    hocr-pixbuf export and import using tiff format
+ * hocr example can read black and white tiff image files
+   without using gtk
 
  -- Yaacov Zamir <kzamir_at_walla.co.il>  Thursday, 24 Apr 2008 09:04
  
